--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
   package="com.guer">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -10,6 +9,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data android:name="JPUSH_CHANNEL" android:value="${APP_CHANNEL}" />
+      <meta-data android:name="JPUSH_APPKEY" android:value="${JPUSH_APPKEY}" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
