--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.1.6",
+    "@react-navigation/bottom-tabs": "^5.10.2",
+    "@react-navigation/native": "^5.8.2",
+    "@react-navigation/stack": "^5.12.1",
+    "jcore-react-native": "^1.9.0",
+    "jmessage-react-plugin": "^3.1.8",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.8",
+    "react-native-screens": "^2.12.0",
     "react-native-scrollable-tab-view": "^1.0.0",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
