--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@react-navigation/bottom-tabs": "^5.10.2",
     "@react-navigation/native": "^5.8.2",
     "@react-navigation/stack": "^5.12.1",
+    "appcenter": "^3.1.2",
+    "appcenter-analytics": "^3.1.2",
+    "appcenter-crashes": "^3.1.2",
     "jcore-react-native": "^1.9.0",
     "jmessage-react-plugin": "^3.1.8",
+    "jpush-react-native": "^2.8.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
