--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.1.6",
     "@react-navigation/bottom-tabs": "^5.10.2",
@@ -26,6 +27,7 @@
     "react-native": "0.63.2",
     "react-native-code-push": "^6.3.0",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-popover-view": "^3.1.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.12.0",
