--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-code-push": "^6.3.0",
+    "react-native-form": "^2.1.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-popover-view": "^3.1.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.12.0",
     "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-swipe-list-view": "^3.2.5",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
