--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-code-push": "^6.3.0",
     "react-native-form": "^2.1.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-crop-picker": "0.25.0",
     "react-native-popover-view": "^3.1.1",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
