--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-code-push": "^6.3.0",
     "react-native-form": "^2.1.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-html-parser": "^0.1.0",
+    "react-native-htmlview": "^0.15.0",
     "react-native-image-crop-picker": "^0.35.1",
     "react-native-popover-view": "^3.1.1",
     "react-native-reanimated": "^1.13.1",
